<resources>
    <string name="app_name">Movie</string>
    <string name="film_name">Film name</string>
    <string name="film_description">Film description</string>
    <string name="favorite_films">Favorite</string>
    <string name="popular_films">Popular</string>
    <string name="genreId">id</string>
    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="token">fbe4e6280f6a460beaad8ebe2bc130ac</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="haveLocalData">have_local_data</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Ok</string>
    <string name="text_toolbar_genres">Genres</string>
    <string name="base_image_url">https://image.tmdb.org/t/p/w500</string>
    <string name="genre">Genre</string>
    <string name="dialog_genre">dialog_genre</string>
    <string name="home">Home</string>
    <string name="tag_movie">tag_movie</string>
    <string name="error_get_movies">It\'s impossible to get new movies</string>
    <string name="genre_id">mId</string>
    <string name="id">mId</string>
    <string name="sort_popularity">popularity.des</string>
    <string name="genre_checked">mIsChecked</string>
    <string name="movie_id">movieId</string>
    <string name="movie_description">Description some description</string>
    <string name="content">Content</string>
    <string name="movie_genres">Detective</string>
    <string name="movie_releaseDate">22 03 2017</string>
    <string name="movie_image">movie</string>
    <string name="error_delete_or_add">Delete or add not done</string>
    <string name="error_read_movie">Did not get to read the data</string>
    <string name="title_movie">Movie name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_fragment">Search</string>
    <string name="error_add_movies">Failed to add data about the movie to the database</string>
</resources>
